--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fluentui_system_icons: ^1.1.184
   flutter_bloc: ^8.1.1
   flutter_secure_storage:
+  fluttertoast: 8.2.1
   get_it: 7.2.0
   http: ^0.13.5
   formz: ^0.4.1
