--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   formz: ^0.4.1
   pointycastle: ^3.6.1
   shared_preferences: ^2.0.17
+  signalr_netcore: ^1.3.3
   uuid:
   xml:
 
