--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.0.17
   signalr_netcore: ^1.3.3
   uuid:
+  workmanager: ^0.5.1
   xml:
 
   # The following adds the Cupertino Icons font to your application.
