--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: false
-  image_path_android: "assets/images/discryptor_logo_v1_512.png"
-  image_path_ios: "assets/images/discryptor_logo_v1_512.png"
+  image_path_android: "assets/images/discryptor_logo_v1_inv_512.png"
+  image_path_ios: "assets/images/discryptor_logo_v1_inv_512.png"
   min_sdk_android: 21
   remove_alpha_ios: true
   web:
@@ -63,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/discryptor_logo_v1_512_gray.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
